# constellation

./: .gitignore  3  CMakeLists.txt  LICENSE  Matrix.h  README.md  Vector.h  Vector3.h  a.out  install.sh  main.cpp  output
include/Constellation/: ColumnVector.hpp  Diagonal.hpp  Fill.hpp  Identity.hpp  Matrix.h  Matrix.hpp  Matrix2D.hpp  Random.hpp  RowVector.hpp  Scalar.hpp  Vector.hpp  Vector3.hpp  Zero.hpp
include/Constellation/Arithmetic/: EntryWiseMultiplication.hpp
include/Constellation/Arithmetic/Addition/: GenericAddition.hpp  GenericMatrixAddition.hpp  MatrixAddition.hpp  ValueAddition.hpp
include/Constellation/Arithmetic/Addition/AVX-SSE/: Float32Addition.hpp
include/Constellation/Arithmetic/Addition/avx_sse/: float32_addition.hpp  int32_addition.hpp
include/Constellation/Arithmetic/Division/: GenericDivision.hpp  GenericMatrixDivision.hpp  MatrixDivision.hpp  ValueDivision.hpp
include/Constellation/Arithmetic/Division/AVX-SSE/: Int32Division.hpp
include/Constellation/Arithmetic/Division/avx_sse/: float32_division.hpp
include/Constellation/Arithmetic/Multiplication/: GenericMatrixMultiplication.hpp  GenericMultiplication.hpp  MatrixMultiplication.hpp  ValueMultiplication.hpp
include/Constellation/Arithmetic/Multiplication/avx_sse/: float32_multiplication.hpp  int32_multiplication.hpp
include/Constellation/Arithmetic/Subtraction/: GenericMatrixSubtraction.hpp  GenericSubtraction.hpp  MatrixSubtraction.hpp  ValueSubtraction.hpp
include/Constellation/Arithmetic/Subtraction/AVX-SSE/: Float32Subtraction.hpp  Int32Subtraction.hpp
include/Constellation/Comparison/: Comparison.hpp
include/Constellation/Constants/: Constants.hpp
include/Constellation/Functions/: Functions.hpp
include/Constellation/Learning/: Learning.hpp
include/Constellation/MachineLearning/Functions/: Functions.hpp
include/Constellation/Reduction/: Reduction.hpp
include/Constellation/Trigonometry/: Trigonometry.hpp
src/: Identity.cpp  Matrix.SIMD.py  Matrix.cpp  Matrix.h  main.cpp
src/Arithmetic/Addition/AVX-SSE/: Int32Addition.cpp
src/Arithmetic/Addition/SIMD/: Float32Addition.cpp  Int32Addition.cpp
src/Arithmetic/Division/AVX-SSE/: Float32Division.cpp
src/Arithmetic/Division/SIMD/: Float32Division.cpp
src/Arithmetic/Multiplication/AVX-SSE/: Int32Multiplication.cpp
src/Arithmetic/Multiplication/SIMD/: Float32Multiplication.cpp  Int32Multiplication.cpp
src/Arithmetic/Subtraction/AVX-SSE/: Int32Subtraction.cpp
src/Arithmetic/Subtraction/SIMD/: Float32Subtraction.cpp  Int32Subtraction.cpp
src/Trigonometry/: Trigonometry.cpp
src/avx_sse/addition/: float32_addition.cpp  int32_addition.cpp
src/avx_sse/division/: float32_division.cpp  int32_division.cpp
src/avx_sse/multiplication/: float32_multiplication.cpp  int32_multiplication.cpp
src/avx_sse/subtraction/: float32_subtraction.cpp  int32_subtraction.cpp
src/simd/addition/: float32_addition.cpp  int32_addition.cpp  int32_matrix_addition.cpp  int_addition.cpp
tests/: CMakeLists.txt  DiagonalTests.cpp  IdentityTests.cpp  MatrixTests.cpp  ZeroTests.cpp  main.cpp
tests/Functions/: FunctionTests.cpp
tests/Reduction/: ReductionTests.cpp
utils/: Matrix.SIMD.py
